# agent-sdk-examples

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json
ai-sdk/: cost-report.ts  review-with-session.ts  review-with-tools.ts  review.ts  rules-inject.ts  utils.ts
anthropic/: cost-report.ts  review-with-session.ts  review-with-tools.ts  review.ts  skill-autoload.ts
anthropic-python/: .env.example  pyproject.toml  review.py  review_schema.py  utils.py
common/: review-schema.ts
context/changes/example/: plan.md
evals/: promptfooconfig.yaml  provider.ts  review-agent.ts
evals/tests/: assert-schema.ts
