[project]
name = "anthropic-python-examples"
version = "0.1.0"
description = "Claude Agent SDK (Python) code-review example with model swap / OpenRouter routing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[tool.uv]
package = false
